<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arpeggio" />
            <Switch
                android:id="@+id/arpeggio_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate" />
                <SeekBar
                    android:id="@+id/sample_rate_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/octaves" />
                <RadioGroup
                    android:id="@+id/octaves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <RadioButton android:id="@+id/radio_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RadioButton"
                        android:text="@string/n_one"/>
                    <RadioButton android:id="@+id/radio_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RadioButton"
                        android:text="@string/n_two"/>
                    <RadioButton android:id="@+id/radio_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RadioButton"
                        android:text="@string/n_three"/>
                    <RadioButton android:id="@+id/radio_four"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RadioButton"
                        android:text="@string/n_four"/>
                    <RadioButton android:id="@+id/radio_five"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RadioButton"
                        android:text="@string/n_five"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_mode" />
        <RadioGroup
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton android:id="@+id/radio_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/up"/>
            <RadioButton android:id="@+id/radio_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/down"/>
            <RadioButton android:id="@+id/radio_up_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/up_down"/>
            <RadioButton android:id="@+id/radio_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/random"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
