<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dip"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/which_osc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/osc" />
        <SeekBar
            android:id="@+id/level_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <include
        android:id="@+id/osc_wave_selection"
        layout="@layout/wave_selection" />
    <RadioGroup
        android:id="@+id/octave_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/radio_octave_1"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/one" />
        <RadioButton
            android:id="@+id/radio_octave_2"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/two" />
        <RadioButton android:id="@+id/radio_octave_4"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/four" />
        <RadioButton android:id="@+id/radio_octave_8"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/eight" />
        <RadioButton android:id="@+id/radio_octave_16"
            android:layout_width="45dip"
            android:layout_height="wrap_content"
            style="@style/RadioButton"
            android:text="@string/sixteen" />
    </RadioGroup>
</LinearLayout>
