<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modulation" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lfo_rate" />
            <SeekBar
                android:id="@+id/lfo_rate_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount" />
            <SeekBar
                android:id="@+id/lfo_amount_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <include
            android:id="@+id/modulation_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/wave_selection" />
        <RadioGroup
            android:id="@+id/modulation_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton android:id="@+id/radio_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/filter"/>
            <RadioButton android:id="@+id/radio_pitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/pitch"/>
            <RadioButton android:id="@+id/radio_wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/wave"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
