<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:src="@drawable/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/attack" />
            <SeekBar
                android:id="@+id/attack_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:src="@drawable/decay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decay" />
            <SeekBar
                android:id="@+id/decay_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:src="@drawable/sustain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sustain" />
            <SeekBar
                android:id="@+id/sustain_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:src="@drawable/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/release" />
            <SeekBar
                android:id="@+id/release_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>